style: fix styles for readability

--- a/src/components/chatList/chatList.css
+++ b/src/components/chatList/chatList.css
@@ -4,8 +4,8 @@
   height: 100%;
 
   .title {
-    font-weight: 600;
-    font-size: 12px;
+    font-weight: 800;
+    font-size: 16px;
     margin-bottom: 10px;
   }
 
@@ -19,6 +19,8 @@
   a {
     padding: 10px;
     border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
 
     &:hover {
       background-color: #8839ef;
