--- a/src/layouts/rootLayout/rootLayout.css
+++ b/src/layouts/rootLayout/rootLayout.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 16px;
 
     .logo {
       display: flex;
